--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,10 @@ jobs:
           name: webpack artifacts
           path: public/
   test:
-    runs-on: ubuntu-latest
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
