--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,16 +31,14 @@ jobs:
           name: webpack artifacts
           path: public/
   test:
-      - uses: actions/upload-artifact@master
-        with:
-          name: webpack artifacts
-          path: public/
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-2016]
-        node-version: [12.x, 14.x]
+    needs: build
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/download-artifact@main
+        with: 
+          name: webpack artifacts
+          path: public
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
