--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/upload-artifact@main
         with:
           name: webpack artifacts
+          needs: build
           path: public/
   test:
     needs: build
